# backtothefuture

./: .gitignore  CMakeLists.txt  README.md  utils.cpp
include/: archiver.hpp  archivereader.hpp  archivewriter.hpp  config.hpp  deduplicator.h  duplicateresolver.h  duplicateresolver.hpp  executor.h  filescomparer.hpp  fscomposer.hpp  hasher.hpp  pack.hpp  reader.hpp  scan.hpp  types.hpp  unarchiver.hpp  unpack.hpp  utils.hpp  writer.hpp
src/: archiver.cpp  archivereader.cpp  archivewriter.cpp  duplicateresolver.cpp  filescomparer.cpp  fscomposer.cpp  hasher.cpp  main.cpp  pack.cpp  reader.cpp  scan.cpp  unarchiver.cpp  unpack.cpp  utils.cpp  writer.cpp
test/: CMakeLists.txt  hasher_test.cpp  reader_test.cpp  scan_test.cpp  test_pack.cpp  test_utils.cpp  test_utils.hpp  writer_test.cpp
